# toolchain

./: '  .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  :w  ACTOR_CRASH_COURSE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cli  LICENSE  README.md  TODO.md  release-please-config.json  shell.nix
.github/workflows/: opengb.yml  release-please.yml  release.yml  test.yml  tmp.yml
.rivet/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: auth.rs  avatar.rs  build.rs  cdn.rs  ci.rs  config.rs  create.rs  deploy.rs  dev.rs  exec.rs  game.rs  global_config.rs  image.rs  init.rs  mod.rs  ns.rs  run.rs  sidekick.rs  site.rs  unlink.rs  version.rs
cli/src/commands/backend/: database.rs  deploy.rs  mod.rs
cli/src/commands/backend/environment/: create.rs  mod.rs
cli/src/commands/docker/: archive.rs  build.rs  mod.rs  push.rs
cli/src/commands/engine/: mod.rs  unreal.rs
cli/src/commands/image/: archive.rs  build.rs  mod.rs  push.rs
cli/src/commands/sidekick/: backend_dev.rs  backend_gen_sdk.rs  check_login_state.rs  deploy.rs  generate_config.rs  get_bootstrap_data.rs  get_cli_version.rs  get_link.rs  get_lobbies_link.rs  get_logs_link.rs  get_namespace_dev_token.rs  get_namespace_pub_token.rs  get_token.rs  get_version.rs  get_versions_link.rs  kill_process.rs  mod.rs  unlink.rs  util.rs  wait_for_login.rs
cli/src/commands/token/: mod.rs
cli/src/commands/token/create/: dev.rs  mod.rs  pub_ns.rs
cli/src/util/: api.rs  cmd.rs  download.rs  fmt.rs  game.rs  gen.rs  git.rs  global_config.rs  internal_config.rs  lz4.rs  mod.rs  os.rs  paths.rs  secrets.rs  show_term.rs  struct_fmt.rs  telemetry.rs  term.rs  text.rs  upload.rs  users.rs  version_config.rs
cli/tests/: e2e.rs  version.rs
cli/tests/static/basic/: Dockerfile.test  build-cdn.sh  rivet.toml  rivet.version.my-ns.toml  rivet.version.toml  rivet.yaml
cli/tpl/: rivet.version.toml
cli/tpl/ci/github/: foot.yml  head.yml  job-cdn.yml  job-image.yml
cli/tpl/default_config/: cdn.toml  cdn.yaml  foot.toml  head.toml  head.yaml  matchmaker.toml  matchmaker.yaml
cli/tpl/graphics/: get-started.txt
cli/tpl/unreal_config/: config-prod.toml  config-prod.yaml  config.toml  config.yaml  head.toml  server.debug.Dockerfile  server.development.Dockerfile  server.shipping.Dockerfile
cli/tpl/workflows/: rivet-publish.yaml
core/: Cargo.toml
core/src/: ctx.rs  error.rs  lib.rs
core/src/config/version/: cdn.rs  identity.rs  kv.rs  mm.rs  mod.rs
doc/: RELEASE_PROCESS.md
examples/basic/: .gitignore  backend.json  lookup_sourcemap.sh  rivet.json
examples/html5/: README.md  game_server.Dockerfile  package-lock.json  package.json  rivet.dev.json  rivet.json
examples/js-deno/: rivet.jsonc  rng_http.ts
examples/js-kv/: index.js  rivet.jsonc
examples/js-manual/: rivet.jsonc
install/: unix.sh  windows.ps1
lib/rivet-api/: Cargo.toml  README.md
lib/rivet-api-cloud/: Cargo.toml  README.md
lib/rivet-cloud/: Cargo.toml
rivet-cli/: Cargo.toml
rivet-cli/src/: main.rs
rivet-cli/src/commands/: avatar.rs  cdn.rs  ci.rs  config.rs  deploy.rs  dev.rs  exec.rs  game.rs  init.rs  login.rs  logout.rs  mod.rs  ns.rs  run.rs  task.rs  unlink.rs  version.rs
rivet-cli/src/commands/backend/: database.rs  deploy.rs  dev.rs  mod.rs
rivet-cli/src/commands/backend/environment/: create.rs  mod.rs
rivet-cli/src/commands/config/: edit.rs  mod.rs
rivet-cli/src/commands/docker/: build.rs  mod.rs  push.rs
rivet-cli/src/commands/engine/: mod.rs  unreal.rs
rivet-cli/src/commands/sidekick/: deploy.rs  exec_command.rs  generate_config.rs  get_bootstrap_data.rs  get_link.rs  get_lobbies_link.rs  get_logs_link.rs  get_namespace_dev_token.rs  get_namespace_pub_token.rs  get_versions_link.rs  mod.rs  show_term.rs  unlink.rs  util.rs  wait_for_login.rs
rivet-cli/src/commands/token/: mod.rs
rivet-cli/src/commands/token/create/: dev.rs  mod.rs  pub_ns.rs
rivet-cli/src/util/: cmd.rs  global_config.rs  mod.rs  paths.rs  task.rs  telemetry.rs  text.rs  upload.rs  version_config.rs
rivet-cli/tests/: e2e.rs  version.rs
rivet-cli/tests/static/basic/: Dockerfile.test  rivet.my-ns.yaml  run.sh
rivet-cli/tpl/ci/github/: head.yml
rivet-cli/tpl/graphics/: logo.txt
rivet-cli/tpl/unreal_config/: .dockerignore  server.development.Dockerfile  server.shipping.Dockerfile
rivet-toolchain/: Cargo.toml  build.rs
rivet-toolchain-core/: Cargo.toml
rivet-toolchain-ffi/: Cargo.toml
rivet-toolchain-ffi/src/: lib.rs  util.rs
rivet-toolchain/src/: ctx.rs  game.rs  lib.rs  paths.rs
rivet-toolchain/src/backend/: database.rs  mod.rs
rivet-toolchain/src/config/: global.rs  meta.rs  mod.rs  settings.rs
rivet-toolchain/src/tasks/: backend_choose_local_port.rs  backend_dev.rs  backend_sdk_gen.rs  check_login_state.rs  check_requirements.rs  check_system_requirements.rs  exec_command.rs  get_bootstrap_data.rs  get_hub_link.rs  get_settings_paths.rs  mod.rs  open.rs  show_term.rs  start_device_link.rs  unlink.rs  wait_for_login.rs
rivet-toolchain/src/tasks/deploy/: backend.rs  game_server.rs  mod.rs
rivet-toolchain/src/util/: cmd.rs  deno.rs  mod.rs  show_term.rs  telemetry.rs  term.rs
rivet-toolchain/src/util/docker/: archive.rs  build.rs  mod.rs  push.rs
rivet-toolchain/src/util/net/: upload.rs
rivet-toolchain/src/util/task/: ctx.rs  json.rs  log.rs  mod.rs  output.rs  task.rs
rivetctl/: Cargo.toml
rivetctl/src/: config.rs  ctx.rs  error.rs  lib.rs
rivetctl/src/config/: global.rs
rivetctl/src/config/version/: cdn.rs  kv.rs  mm.rs  mod.rs
scripts/: build_and_copy_to_godot.sh  build_cross.sh  build_ffi.sh  check_links.rs  copy_libs.sh  copy_sdks.sh  deno.jsonc  release.sh  shellcheck.sh  test.sh  test_cmd.sh  test_setup.sh  test_version.sh
scripts/artifacts/: build_drizzle.ts  build_runtime_archive.ts  util.ts
scripts/backend/: build_artifacts.ts
scripts/check/: check_links.rs
scripts/deno/: mirror_release.ts
scripts/release/: publish_cli_release.ts  release.sh  release.ts
scripts/sdk/: copy.ts  (+1 more)
tests/: Rivet.toml  basic.sh  rivet.toml
(+2433 files in other folders)
