[package]
name = "rivet-cli"
version = "0.1.3"
authors = ["Rivet Gaming, Inc. <developer@rivet.gg>"]
edition = "2018"
license = "MIT"
description = "Managed game servers, matchmaking, and DDoS mitigation that lets you focus on building your game."
homepage = "https://rivet.gg"
repository = "https://github.com/rivet-gg/cli"
build = "build.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3.3"
aws-smithy-types = "*"
chrono = "0.4.21"
clap = { version = "3.2.16", features = ["derive", "env"] }
cli-core = { path = "../core", package = "rivet-cli-core" }
config = "0.13.2"
console = "0.15"
fs_extra = "1.2.0"
futures-util = "0.3"
humansize = "1.1"
ignore = "0.4"
mime_guess = "2.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
tabled = "0.8.0"
tempfile = "3.2"
term_size = "0.3.2"
tokio = { version = "1.27", default-features = false, features = ["fs", "macros", "process", "rt"] }
tokio-util = { version = "0.7", default-features = false, features = ["io-util"] }
uuid = { version = "1.3", features = ["v4"] }
webbrowser = "0.8.7"
zip = "0.5.13"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.5", default_features = false, features = ["build", "git", "rustc", "cargo"] }

