[package]
name = "rivet-cli"
version = "1.0.2"
authors = ["Rivet Gaming, Inc. <developer@rivet.gg>"]
edition = "2018"
license = "MIT"
description = "Managed game servers, matchmaking, and DDoS mitigation that lets you focus on building your game."
homepage = "https://rivet.gg"
repository = "https://github.com/rivet-gg/cli"
build = "build.rs"

[features]
sentry = []

[dependencies]
async-posthog = { git = "https://github.com/rivet-gg/posthog-rs.git", rev = "ef4e80e" }
async-stream = "0.3.3"
chrono = "0.4.21"
clap = { version = "3.2.16", features = ["derive", "env"] }
cli-core = { path = "../core", package = "rivet-cli-core" }
# Disable less common file formats. Preserve TOML for backwards compatibility.
config = { version = "0.13.2", default-features = false, features = ["yaml", "toml", "json"] }
console = "0.15"
dirs = "5.0"
fs_extra = "1.2.0"
futures-util = "0.3"
global-error = {  git = "https://github.com/rivet-gg/rivet.git", rev = "22baf31efa3ffcdad65ecc72ce25425ab61b9c6f" }
humansize = "1.1"
ignore = "0.4"
indicatif = "0.17"
lz4 = "1.24"
mime_guess = "2.0"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
sentry = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
sysinfo = "0.30.0"
tabled = "0.8.0"
tar = "0.4.40"
tempfile = "3.2"
term_size = "0.3.2"
tokio = { version = "1.27", default-features = false, features = ["fs", "macros", "process", "rt"] }
tokio-util = { version = "0.7", default-features = false, features = ["io-util"] }
typed-path = "0.7.0"
url = "2.5.0"
uuid = { version = "1.3", features = ["v4"] }
webbrowser = "0.8.7"
which = "5.0.0"
zip = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["user"] }

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.5", default_features = false, features = ["build", "git", "rustc", "cargo"] }

