[package]
name = "rivet-cli-core"
version = "0.0.40"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "MIT"
build = "build.rs"

[dependencies]
aws-smithy-client = "^0.41.0"
home = "0.5.3"
openssl = { version = "*", features = ["vendored"] }  # Required for cross compilation, see https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837
rivet-api = { path = "../lib/rivet-api" }
rivet-cloud = { path = "../lib/rivet-cloud" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tower = "0.4.12"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.5", default_features = false, features = ["build", "git"] }

