[package]
name = "rivet-cli-core"
version = "0.0.1"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "MIT"
description = "Managed game servers, matchmaking, and DDoS mitigation that lets you focus on building your game."
homepage = "https://rivet.gg"
repository = "https://github.com/rivet-gg/cli"
build = "build.rs"

[dependencies]
home = "0.5.3"
openssl = { version = "*", features = ["vendored"] }  # Required for cross compilation, see https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837
rivet-api = { package = "rivet-api-cli", git = "https://github.com/rivet-gg/rivet", rev = "49ccac3c5a9ac14a05b93e1ec0fe605009f5b77a" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0"
tokio = { version = "1.27", default-features = false }
tower = "0.4.12"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.5", default_features = false, features = ["build", "git"] }

