[package]
name = "rivet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
global-error = {  git = "https://github.com/rivet-gg/rivet.git", rev = "22baf31efa3ffcdad65ecc72ce25425ab61b9c6f" }
toolchain = { version = "0.1.0", path = "../rivet-toolchain", package = "rivet-toolchain" }
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"

