[package]
name = "rivetctl-lib"
version = "0.0.1"
authors = ["Nathan Flurry <developer@nathanflurry.com>"]
edition = "2018"
license = "MIT"

[dependencies]
rivet-cloud = { path = "../lib/rivet-cloud" }
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
aws-smithy-client = "^0.41.0"
tower = "0.4.12"
home = "0.5.3"
serde_json = "1.0.83"
